Fix stacking order on mobile
On small screens, the social media buttons were visible but not clickable.

--- a/app/static/features/20-years/_styles.sass
+++ b/app/static/features/20-years/_styles.sass
@@ -610,6 +610,7 @@ strong, .txt-tu, .caption
 #header,
 #footer
   position: relative
+  z-index: 1
   &:before
     content: ""
     position: absolute
